# hello-rocket

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-10-08-005217_create_posts/: up.sql
src/: database.rs  lib.rs  main.rs
src/app/: mod.rs  post_handlers.rs
src/app/handlers/: chat_handlers.rs  message_handlers.rs  mod.rs  post_handlers.rs
src/app/requests/: chat_requests.rs  message_requests.rs  mod.rs  post_requests.rs
src/models/: chat.rs  message.rs  mod.rs
