[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
ws = {package = "rocket_ws", version = "0.1.1"}
diesel = {version = "2.2.4", features = ["postgres"]}
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.mongodb]
version = "3.1.0"